--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -143,6 +143,9 @@
     }
 }
 @media(max-width:767px){
+    .privacy-wrap h5 {
+        font-size: 20px;
+    }
     .site-logo img {
         max-width: 150px;
     }
@@ -196,6 +199,10 @@
     }
 }
 @media(max-width:575px){
+    #cookies-popup button {
+        padding: 8px 15px;
+        font-size: 14px;
+    }
     .ptb-50 {
         padding: 30px 0;
     }
