--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,6 +1,9 @@
 @media(min-width:1400px){
-    .sub-banner,  .site-banner  {
+    .sub-banner  {
         height: 650px;
+    }
+    .site-banner {
+        height: 85vh;
     }
    
 }
@@ -19,7 +22,7 @@
         font-size: 35px;
     }
     .topcontent-picture img {
-        height: 500px;
+        height: 450px;
     }
     .footer-heading h4, h4  {
         font-size: 32px;
@@ -115,7 +118,11 @@
         right: 10px;
 
     }
-
+    .nav-links ul li {
+        width: 100%;
+        border-bottom: 1px solid #fff;
+        padding: 7px 0;
+    }
 }
 
 @media(max-width:900px){
@@ -197,11 +204,28 @@
     .contact-txt h5 {
         font-size: 20px;
     }
+    .site-banner  {
+        height: 80vh;
+    }
+    .top-card-txt .read-more-btn {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 }
 @media(max-width:575px){
+   
+    .copy-right {
+        flex-direction: column-reverse;
+    }
+    .copy-right .footer-links ul {
+        margin: 15px 0;
+    }
     #cookies-popup button {
         padding: 8px 15px;
         font-size: 14px;
+    }
+    .footer-links ul {
+        gap: 12px;
     }
     .ptb-50 {
         padding: 30px 0;
