--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,6 +409,7 @@ padding-top: 70px;
      padding: 20px 20px;
      text-align: center;
      box-shadow: rgb(0 0 0 / 20%) 0px 0px 15px;
+     z-index: 99;
     /* display: none; */
 }
  #cookies-popup p {
