--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -10,7 +10,7 @@
 
 @media(max-width:1400px){
     .nav-links ul li a {
-        font-size: 18px;
+        font-size: 16px;
     }
     .banner-txt h1 {
         font-size: 50px;
@@ -42,8 +42,11 @@
     }
 }
 @media(max-width:1200px){
+    .nav-links ul {
+        gap: 25px;
+    }
     .nav-links ul li a {
-        font-size: 16px;
+        font-size: 15px;
     }
     .banner-txt h1 {
         font-size: 45px;
@@ -143,7 +146,7 @@
         font-size: 28px;
     }
     .banner-txt h1 {
-        font-size: 40px;
+        font-size: 30px;
     }
     .sub-banner-txt h2 {
         font-size: 32px;
@@ -158,7 +161,7 @@
         width: 100%;
     }
     .banner-txt h1 {
-        font-size: 35px;
+        font-size: 28px;
     }
     .top-card {
         margin-bottom: 50px;
@@ -201,7 +204,7 @@
         font-size: 20px;
     }
     .site-banner  {
-        height: 80vh;
+     height: 100vh;
     }
     .top-card-txt .read-more-btn {
         margin-top: 20px;
@@ -239,7 +242,7 @@
         font-size: 22px;
     }
     .banner-txt h1 {
-        font-size: 32px;
+        font-size: 20px;
     }
     h3 {
         font-size: 25px;
